# stun-cpp

./: .gitignore  CMakeLists.txt  flake.nix  hello.py  pyproject.toml  shell.nix
include/: stunHeader.h  stunService.h  udpServer.h
src/: main.cpp  stunHeader.cpp  stunService.cpp
tests/: stunHeader.cpp
tests/py/: client.py
